added descr icons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                         Гальмівні<br />
                         трубки
                     </h1>
-                    <p class="hero_content__item hero_content__descr">Інтернет-магазин <span>TormozOK</span><br> пропонує трубки для гальмів</p>
+                    <p class="hero_content__item hero_content__descr">Інтернет-магазин <span>TormozOK</span><br>
+                        пропонує трубки для гальмів</p>
                 </div>
             </div>
             <div class="hero_content__order">
@@ -38,8 +39,46 @@
             </div>
         </div>
     </section>
-    <section class="descr">
+    <section class="descr" id="descr">
         <h2 class="descr_title">Що ми пропонуємо</h2>
+        <div class="descr_features">
+            <div class="descr_item descr_search">
+                <i class="descr_search__icon">
+                    <img src="images/icons/mdi_selection-search.svg" alt="Search">
+                </i>
+                <div class="descr_item__text">
+                    <p>Для экономии Вашего времени подберём нужные детали по номеру кузова автомобиля и предложим разные
+                        варианты цены и производителя — только позвоните и дайте задачу.</p>
+
+                </div>
+            </div>
+            <div class="descr_item descr_delivery">
+                <i class="descr_delivery__icon">
+                    <img src="images/icons/mdi_truck-delivery-outline.svg" alt="Delivery">
+                </i>
+                <div class="descr_item__text">
+                    <p>Доставим до двери, если Вы находитесь в Киеве.</p>
+                    <p>Отправим перевозчиком, если Вы живёте в любом другом городе Украины.</p>
+                </div>
+            </div>
+            <div class="descr_item descr_info">
+                <i class="descr_info__icon">
+                    <img src="images/icons/mdi_folder-information-outline.svg" alt="Info">
+                </i>
+                <div class="descr_item__text">
+                    <p>Быстро отреагируем на Ваш заказ из сайта — стоит только оформить его
+                        и указать некоторую инфу для отправки</p>
+                </div>
+            </div>
+            <div class="descr_item descr_call">
+                <i class="descr_call__icon">
+                    <img src="images/icons/mdi_phone-message-outline.svg" alt="Call">
+                </i>
+                <div class="descr_item__text">
+                    <p>Подбирайте! Звоните! Заказывайте! Подробнее: https://tormozok.in.ua</p>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
