--- a/index.html
+++ b/index.html
@@ -1,85 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Tormozok</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <section class="hero">
-        <header class="hero_header">
-            <div class="logo">
-                <a href="index.html">
-                    <img src="images/Logo.svg" alt="Logo" />
-                </a>
-            </div>
-            <a class="hero_header__mail" href="mailto:olekseenko01@gmail.com">olekseenko01@gmail.com</a>
-            <a class="hero_header__phone" href="tel:380676613235">+380 67 661 3235</a>
-        </header>
-        <div class="hero_content">
-            <div class="hero_content__info">
-                <div class="hero_content__text">
-                    <div class="hero_content__item hero_content__subtitle">Tormozok</div>
-                    <h1 class="hero_content__item hero_content__title">
-                        Гальмівні<br />
-                        трубки
-                    </h1>
-                    <p class="hero_content__item hero_content__descr">Інтернет-магазин <span>TormozOK</span><br>
-                        пропонує трубки для гальмів</p>
-                </div>
-            </div>
-            <div class="hero_content__order">
-                <button type="button" class="hero_content__button">
-                    оформити<br> замовлення
-                </button>
-            </div>
+      <header class="hero_header">
+        <div class="logo">
+          <a href="index.html">
+            <img src="images/Logo.svg" alt="Logo" />
+          </a>
         </div>
+        <a class="hero_header__mail" href="mailto:olekseenko01@gmail.com"
+          >olekseenko01@gmail.com</a
+        >
+        <a class="hero_header__phone" href="tel:380676613235"
+          >+380 67 661 3235</a
+        >
+      </header>
+      <div class="hero_content">
+        <div class="hero_content__info">
+          <div class="hero_content__text">
+            <div class="hero_content__item hero_content__subtitle">
+              Tormozok
+            </div>
+            <h1 class="hero_content__item hero_content__title">
+              Гальмівні<br />
+              трубки
+            </h1>
+            <p class="hero_content__item hero_content__descr">
+              Інтернет-магазин <span>TormozOK</span><br />
+              пропонує трубки для гальмів
+            </p>
+          </div>
+        </div>
+        <div class="hero_content__order">
+          <button type="button" class="hero_content__button">
+            оформити<br />
+            замовлення
+          </button>
+        </div>
+      </div>
     </section>
     <section class="descr" id="descr">
-        <h2 class="descr_title">Що ми пропонуємо</h2>
-        <div class="descr_features">
-            <div class="descr_item descr_search">
-                <i class="descr_search__icon">
-                    <img src="images/icons/mdi_selection-search.svg" alt="Search">
-                </i>
-                <div class="descr_item__text">
-                    <p>Для экономии Вашего времени подберём нужные детали по номеру кузова автомобиля и предложим разные
-                        варианты цены и производителя — только позвоните и дайте задачу.</p>
-
-                </div>
-            </div>
-            <div class="descr_item descr_delivery">
-                <i class="descr_delivery__icon">
-                    <img src="images/icons/mdi_truck-delivery-outline.svg" alt="Delivery">
-                </i>
-                <div class="descr_item__text">
-                    <p>Доставимо до дверей, якщо Ви знаходитесь в Києві.</p>
-                    <p>Відправимо перевізником, якщо Ви знаходитесь в будь-якому іншому місті України.</p>
-                </div>
-            </div>
-            <div class="descr_item descr_info">
-                <i class="descr_info__icon">
-                    <img src="images/icons/mdi_folder-information-outline.svg" alt="Info">
-                </i>
-                <div class="descr_item__text">
-                    <p>Быстро отреагируем на Ваш заказ из сайта — стоит только оформить его
-                        и указать некоторую инфу для отправки</p>
-                </div>
-            </div>
-            <div class="descr_item descr_call">
-                <i class="descr_call__icon">
-                    <img src="images/icons/mdi_phone-message-outline.svg" alt="Call">
-                </i>
-                <div class="descr_item__text">
-                    <p>Подбирайте! Звоните! Заказывайте! Подробнее: https://tormozok.in.ua</p>
-                </div>
-            </div>
+      <h2 class="descr_title">Що ми пропонуємо</h2>
+      <div class="descr_features">
+        <div class="descr_item descr_search">
+          <i class="descr_search__icon">
+            <img src="images/icons/mdi_selection-search.svg" alt="Search" />
+          </i>
+          <div class="descr_item__text">
+            <p>
+              Для экономии Вашего времени подберём нужные детали по номеру
+              кузова автомобиля и предложим разные варианты цены
+              и производителя — только позвоните и дайте задачу.
+            </p>
+          </div>
         </div>
+        <div class="descr_item descr_delivery">
+          <i class="descr_delivery__icon">
+            <img
+              src="images/icons/mdi_truck-delivery-outline.svg"
+              alt="Delivery"
+            />
+          </i>
+          <div class="descr_item__text">
+            <p>Доставимо до дверей, якщо Ви знаходитесь в Києві.</p>
+            <p>
+              Відправимо перевізником, якщо Ви знаходитесь в будь-якому іншому
+              місті України.
+            </p>
+          </div>
+        </div>
+        <div class="descr_item descr_info">
+          <i class="descr_info__icon">
+            <img
+              src="images/icons/mdi_folder-information-outline.svg"
+              alt="Info"
+            />
+          </i>
+          <div class="descr_item__text">
+            <p>
+              Быстро отреагируем на Ваш заказ из сайта — стоит только оформить
+              его и указать некоторую инфу для отправки
+            </p>
+          </div>
+        </div>
+        <div class="descr_item descr_call">
+          <i class="descr_call__icon">
+            <img src="images/icons/mdi_phone-message-outline.svg" alt="Call" />
+          </i>
+          <div class="descr_item__text">
+            <p>
+              Подбирайте! Звоните! Заказывайте! Подробнее:
+              https://tormozok.in.ua
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
-</body>
-
+  </body>
 </html>
