contacts icons add

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <img src="images/Logo.svg" alt="Logo" />
                 </a>
             </div>
-            <div class="hero_header__mail">olekseenko01@gmail.com</div>
-            <div class="hero_header__phone">+380 67 661 3235</div>
+            <a class="hero_header__mail" href="mailto:olekseenko01@gmail.com">olekseenko01@gmail.com</a>
+            <a class="hero_header__phone" href="tel:380676613235">+380 67 661 3235</a>
         </header>
         <div class="hero_content">
             <div class="hero_content__info">
@@ -34,7 +34,7 @@
             </div>
             <div class="hero_content__order">
                 <button type="button" class="hero_content__button">
-                    <a href="#">оформити<br> замовлення</a>
+                    оформити<br> замовлення
                 </button>
             </div>
         </div>
@@ -57,8 +57,8 @@
                     <img src="images/icons/mdi_truck-delivery-outline.svg" alt="Delivery">
                 </i>
                 <div class="descr_item__text">
-                    <p>Доставим до двери, если Вы находитесь в Киеве.</p>
-                    <p>Отправим перевозчиком, если Вы живёте в любом другом городе Украины.</p>
+                    <p>Доставимо до дверей, якщо Ви знаходитесь в Києві.</p>
+                    <p>Відправимо перевізником, якщо Ви знаходитесь в будь-якому іншому місті України.</p>
                 </div>
             </div>
             <div class="descr_item descr_info">
